--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+distro: raspian
 python:
   - "3.4"
   - "3.5"
@@ -8,4 +9,4 @@ python:
   - "3.7-dev" # 3.7 development branch
   - "nightly" # currently points to 3.7-dev
 # command to install dependencies
-
+  - "pip install -r requirements.txt"
